# open-reverb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
open-reverb-client/: Cargo.toml
open-reverb-client/src/: app.rs  audio.rs  config.rs  connection.rs  main.rs  screenshare.rs  video.rs
open-reverb-client/src/ui/: login.rs  main_view.rs  mod.rs  settings.rs  style.rs
open-reverb-common/: Cargo.toml
open-reverb-common/src/: error.rs  lib.rs  models.rs  protocol.rs
open-reverb-server/: Cargo.toml
open-reverb-server/src/: auth.rs  config.rs  database.rs  main.rs  server.rs  session.rs
scripts/: build_macos.sh  build_windows.bat  cross_compile_windows.sh
