[package]
name = "open-reverb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
open-reverb-common = { path = "../open-reverb-common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"